updated with data

--- a/dothist-template.html
+++ b/dothist-template.html
@@ -42,13 +42,13 @@ div.tooltip {
 
 //SVG setup
 var margin = {top: 10, right: 30, bottom: 30, left: 30},
-      width = 550 - margin.left - margin.right,
+      width = 300 - margin.left - margin.right,
       height = 480 - margin.top - margin.bottom;
 
 //scales
 var x = d3.scaleLinear()
     .rangeRound([0, width])
-    .domain([1978, 2018]);
+    .domain([0, 375]);
 
 var z = d3.scaleOrdinal()
     .range(["#d3d3d3", "#8a89a6"]);
@@ -71,14 +71,14 @@ var tooltip = d3.select("body")
 var dataFile = "data.csv"
 
 //number of bins for histogram
-var nbins = 41;
+var nbins = 15;
 
 function update(){
   // Get the data
   d3.csv(dataFile, function(data) {
     data.forEach(function(d) {
-        d.MakeModel = d.MakeModel
-        d.Year = +d.Year
+        d.Name = d.Name
+        d.PctFunded = +d.PctFunded
         d.Luxury = d.Luxury;
     });
 
@@ -88,7 +88,7 @@ function update(){
     var histogram = d3.histogram()
       .domain(x.domain())
       .thresholds(x.ticks(nbins))
-      .value(function(d) { return d.Year;} );
+      .value(function(d) { return d.PctFunded;} );
 
     //binning data and filtering out empty bins
     var bins = histogram(data).filter(d => d.length>0)
@@ -108,8 +108,8 @@ function update(){
     binContainerEnter.selectAll("circle")
         .data(d => d.map((p, i) => {
           return {idx: i,
-                  name: p.MakeModel,
-                  year: p.Year,
+                  name: p.Name,
+                  pct: p.PctFunded,
                   luxury: p.Luxury,
                   radius: 5
                 }
@@ -148,7 +148,7 @@ function tooltipOn(d) {
   tooltip.transition()
        .duration(200)
        .style("opacity", 1);
-  tooltip.html(d.year + " " + d.name)
+  tooltip.html(d.pct + " " + d.name)
     .style("left", gX + "px")
     .style("top", gY + "px");
 }//tooltipOn
